--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,14 @@
   "name": "bookmark-toc",
   "version": "1.0",
   "description": "easy bookmark-toc",
-  "permissions": ["storage", "activeTab"],
+  "permissions": ["storage", "activeTab", "tabs", "background"],
   "background": {
     "service_worker": "background.js"
   },
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
   "commands": {
     "saveDomPosition": {
       "suggested_key": {
@@ -28,7 +32,7 @@
     }
   ],
   "action": {
-    "default_popup": "toc.html",
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "toc.png",
       "32": "toc.png",
